  (Damien Doligez, report by Olivier Nicole, review by Gabriel Scherer)

- #13962: Little ocamltest refactors. Fix error handling in C code,
  leaking file descriptors, code style.
  (Antonin Décimo, review by Gabriel Scherer)

- #13966, #13969: Enable "generalized polymorphic #install_printer"
  in the debugger
  (Pierre Boutillier and Gabriel Scherer, review by Florian Angeletti)

### Manual and documentation:

* #13975: documented the `[@remove_aliases]` built-in attribute for signatures
  (introduced by #1652 in 2018). Small refactor of the code that fetches the
  attribute.
  (Clement Blaudeau, review by Gabriel Scherer)

- #14002: Add anchors to items and headings of the web version of the API
  documentation for easier linking.
  (Nicolás Ojeda Bär, report by Louis Roché, review by Gabriel Scherer and
  Florian Angeletti)

- #14023: Add documentation for the [row_more] function.
  (Richard Eisenberg, review by Jacques Garrigue)

- #14038: Fall back immediately to user-agent-defined fonts when web fonts
  fail to load.
  (toastal)

### Compiler user-interface and warnings:

- #12628: Improved error message for unsafe values: print out the full path for
  the value that is unsafe when they are detected during the compilation of
  recursive modules.
  (Shivam Acharya, review by Gabriel Scherer and Florian Angeletti)

### Internal/compiler-libs changes:

- #13839, #14008: Reimplement `let open`, `let module` and `let exception` in
  terms of a single construct.
  (Nicolás Ojeda Bär, review by Gabriel Scherer, Samuel Vivien, Ulysse Gérard
  and Vincent Laviron)

- #13911: Refactor the merging of signature constraints, by splitting the
  monolithic merge function into separate, specialized functions (for merging
  types, modules and module types) - sharing only the recursive part for
  handling deep constraints.
  (Clement Blaudeau, review by Florian Angeletti and Samuel Vivien)

* #13972: Renamed the `-no-alias-deps` flag internal representation to